# MNFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CLangFormat.cmake  Target.cmake
patches/: apply.sh  folly.patch
src/: CMakeLists.txt  main.cc
src/common/: CMakeLists.txt
src/common/utils/: Result.h  Status.h  StatusCode.cc  StatusCode.h  String.h
src/storage/: CMakeLists.txt  storage.cc
